<resources>
    <string name="app_name">BtCon</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="todo" />

    //menu
    <string name="disable_all">Wyłącz wszystkie</string>
    <string name="menu1">wyjście</string>
    <string name="menu2">ustawienia</string>

    <string name="settings1">Ustawienia</string>
    <string name="mono">Monostabilny</string>
    <string name="bi">Bistabilny</string>
    <string name="quit">Wyjście</string>
    <string name="settings">Ustawienia Aplikacji</string>
    <string name="czas_flow">Czas</string>
</resources>